refactor: bump langchain4j from 0.36.2 to 1.0.0-beta2 and use new chat api